# cmoonshine

./: CMakeLists.txt  README.md
includes/: tiny_obj_loader.h
includes/glm/detail/: qualifier.hpp  type_mat4x4.inl  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
res/shaders/: basic.frag  basic.vert  simple.frag  simple.vert  terrain.frag  terrain.geom  terrain.vert  wireframe.frag  wireframe.vert
src/: lazy.py  main.cpp
src/common/: BaseMaterial.cpp  BaseMaterial.h  GLDrawable.cpp  GLDrawable.h  MeshData.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexAttrib.cpp  VertexAttrib.h  VertexAttribSetup.cpp  VertexAttribSetup.h  VertexDataType.cpp  VertexDataType.h
src/materials/: MaterialManager.cpp  MaterialManager.h  SimpleMaterial.cpp  SimpleMaterial.h
src/system/: Application.cpp  Application.h  Assets.cpp  Assets.h  Configuration.cpp  Configuration.h  Engine.cpp  Engine.h  GLFWManager.cpp  GLFWManager.h  Input.cpp  Input.h  Materials.cpp  Materials.h  RenderContext.h  Renderer.cpp  Renderer.h  Textures.cpp  Textures.h  Window.cpp  Window.h
src/util/: FileReader.cpp  FileReader.h  Logger.cpp  Logger.h  ModelLoader.cpp  ModelLoader.h  Timer.cpp  Timer.h  geometry.cpp  geometry.h  glmath.h
src/voxel/: Buffer3.h  MCTables.h  MarchingCubes.h  VoxVertex.h  VoxelGrid.h
src/world/: Camera.cpp  Camera.h  Drawable.h  FlyCamera.cpp  FlyCamera.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  NodeType.cpp  NodeType.h  Spatial.cpp  Spatial.h  Terrain.cpp  Terrain.h  world.cpp
